// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminHomePageComponent should snap with default view 1`] = `
<tm-admin-home-page
  accountReqs={[Function Array]}
  accountService={[Function AccountService]}
  activeRequests="0"
  currentPage={[Function Number]}
  formatDateDetailPipe={[Function FormatDateDetailPipe]}
  instructorDetails=""
  instructorEmail=""
  instructorInstitution=""
  instructorName=""
  items$={[Function Observable]}
  pageSize={[Function Number]}
  statusMessageService={[Function StatusMessageService]}
  timezoneService={[Function TimezoneService]}
>
  <div
    class="card bg-light top-padded"
  >
    <div
      class="card-body"
    >
      <div>
        <strong>
          Adding Multiple Instructors
        </strong>
        <p
          class="text-muted"
        >
          <i
            class="fas fa-exclamation-circle"
          />
           Add Instructor Details in the format: Name | Email | Institution 
        </p>
        <textarea
          aria-label="Add multiple instructors"
          class="form-control ng-untouched ng-pristine ng-valid"
          id="instructor-details-single-line"
        />
      </div>
      <div
        class="top-padded"
      >
        <button
          class="btn btn-primary"
          id="add-instructor-single-line"
        >
          Add Instructors
        </button>
      </div>
    </div>
  </div><div
    class="card bg-light top-padded"
  >
    <div
      class="card-body"
    >
      <div>
        <strong>
          Adding a Single Instructor
        </strong>
      </div>
      <div
        class="top-padded"
      >
        <label
          for="instructor-name"
        >
          <strong>
            Name:
          </strong>
        </label>
        <input
          class="form-control ng-untouched ng-pristine ng-valid"
          id="instructor-name"
          type="text"
        />
      </div>
      <div
        class="top-padded"
      >
        <label
          for="instructor-email"
        >
          <strong>
            Email:
          </strong>
        </label>
        <input
          class="form-control ng-untouched ng-pristine ng-valid"
          id="instructor-email"
          type="text"
        />
      </div>
      <div
        class="top-padded"
      >
        <label
          for="instructor-institution"
        >
          <strong>
            Institution:
          </strong>
        </label>
        <input
          class="form-control ng-untouched ng-pristine ng-valid"
          id="instructor-institution"
          type="text"
        />
      </div>
      <div
        class="top-padded"
      >
        <button
          class="btn btn-primary"
          id="add-instructor"
        >
          Add Instructor
        </button>
      </div>
    </div>
  </div>
</tm-admin-home-page>
`;

exports[`AdminHomePageComponent should snap with some instructors details 1`] = `
<tm-admin-home-page
  accountReqs={[Function Array]}
  accountService={[Function AccountService]}
  activeRequests="0"
  currentPage={[Function Number]}
  formatDateDetailPipe={[Function FormatDateDetailPipe]}
  instructorDetails=""
  instructorEmail=""
  instructorInstitution=""
  instructorName=""
  items$={[Function Observable]}
  pageSize={[Function Number]}
  statusMessageService={[Function StatusMessageService]}
  timezoneService={[Function TimezoneService]}
>
  <div
    class="card bg-light top-padded"
  >
    <div
      class="card-body"
    >
      <div>
        <strong>
          Adding Multiple Instructors
        </strong>
        <p
          class="text-muted"
        >
          <i
            class="fas fa-exclamation-circle"
          />
           Add Instructor Details in the format: Name | Email | Institution 
        </p>
        <textarea
          aria-label="Add multiple instructors"
          class="form-control ng-untouched ng-pristine ng-valid"
          id="instructor-details-single-line"
        />
      </div>
      <div
        class="top-padded"
      >
        <button
          class="btn btn-primary"
          id="add-instructor-single-line"
        >
          Add Instructors
        </button>
      </div>
    </div>
  </div><div
    class="card bg-light top-padded"
  >
    <div
      class="card-body"
    >
      <div>
        <strong>
          Adding a Single Instructor
        </strong>
      </div>
      <div
        class="top-padded"
      >
        <label
          for="instructor-name"
        >
          <strong>
            Name:
          </strong>
        </label>
        <input
          class="form-control ng-untouched ng-pristine ng-valid"
          id="instructor-name"
          type="text"
        />
      </div>
      <div
        class="top-padded"
      >
        <label
          for="instructor-email"
        >
          <strong>
            Email:
          </strong>
        </label>
        <input
          class="form-control ng-untouched ng-pristine ng-valid"
          id="instructor-email"
          type="text"
        />
      </div>
      <div
        class="top-padded"
      >
        <label
          for="instructor-institution"
        >
          <strong>
            Institution:
          </strong>
        </label>
        <input
          class="form-control ng-untouched ng-pristine ng-valid"
          id="instructor-institution"
          type="text"
        />
      </div>
      <div
        class="top-padded"
      >
        <button
          class="btn btn-primary"
          id="add-instructor"
        >
          Add Instructor
        </button>
      </div>
    </div>
  </div><tm-account-request-table>
    <div
      class="card bg-light top-padded"
    >
      <div
        class="card-header bg-primary text-white"
      >
        <strong>
          Pending Account Requests
        </strong>
      </div>
      <div
        class="table-responsive"
      >
        <table
          class="table table-striped data-table"
          id="search-table-account-request"
        >
          <thead>
            <tr>
              <th>
                Name
              </th>
              <th>
                Email
              </th>
              <th>
                Status
              </th>
              <th>
                Institute, Country
              </th>
              <th>
                Created At
              </th>
              <th>
                Comments
              </th>
              <th>
                Options
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                Instructor A
              </td>
              <td>
                instructora@example.com
              </td>
              <td>
                PENDING
              </td>
              <td>
                Institution and Country A
              </td>
              <td
                id="timestamp-box"
              >
                Created Time A
              </td>
              <td>
                <div
                  id="comment-box"
                >
                  Comment A
                </div>
              </td>
              <td
                class="align-middle"
              >
                <div
                  class="d-flex flex-row align-items-center justify-content-center gap-2"
                >
                  <div>
                    <a
                      id="edit-account-request-0"
                    >
                      <i
                        class="fa-solid fa-pen"
                      />
                    </a>
                  </div>
                  <div
                    class="ngb-tooltip-class"
                    placement="top"
                  >
                    <a
                      id="delete-account-request-0"
                    >
                      <i
                        class="fa-solid fa-trash"
                      />
                    </a>
                  </div>
                  <div>
                    <a
                      id="view-account-request-0"
                    >
                      <i
                        class="fa-solid fa-eye"
                      />
                    </a>
                  </div>
                  <button
                    class="btn btn-success"
                    id="approve-account-request-0"
                  >
                    Approve
                  </button>
                  <span
                    class="dropdown"
                    container="body"
                    ngbdropdown=""
                  >
                    <button
                      aria-expanded="false"
                      class="dropdown-toggle btn btn-warning"
                      id="reject-account-request-0"
                      ngbdropdowntoggle=""
                      type="button"
                    >
                       Reject 
                    </button>
                    <div
                      class="dropdown-menu"
                      ngbdropdownmenu=""
                    >
                      <button
                        class="btn btn-light btn-sm dropdown-item"
                        id="reject-request-0"
                      >
                         Reject 
                      </button>
                      <button
                        class="btn btn-light btn-sm dropdown-item"
                        id="reject-request-with-reason-0"
                      >
                         Reject With Reason 
                      </button>
                    </div>
                  </span>
                </div>
              </td>
            </tr>
            <tr>
              <td>
                Instructor B
              </td>
              <td>
                instructorb@example.com
              </td>
              <td>
                APPROVED
              </td>
              <td>
                Institution and Country B
              </td>
              <td
                id="timestamp-box"
              >
                Created Time B
              </td>
              <td>
                <div
                  id="comment-box"
                >
                  Comment B
                </div>
              </td>
              <td
                class="align-middle"
              >
                <div
                  class="d-flex flex-row align-items-center justify-content-center gap-2"
                >
                  <div>
                    <a
                      id="edit-account-request-1"
                    >
                      <i
                        class="fa-solid fa-pen"
                      />
                    </a>
                  </div>
                  <div
                    class="ngb-tooltip-class"
                    placement="top"
                  >
                    <a
                      id="delete-account-request-1"
                    >
                      <i
                        class="fa-solid fa-trash"
                      />
                    </a>
                  </div>
                  <div>
                    <a
                      id="view-account-request-1"
                    >
                      <i
                        class="fa-solid fa-eye"
                      />
                    </a>
                  </div>
                  <button
                    class="btn btn-success"
                    disabled=""
                    id="approve-account-request-1"
                  >
                    Approve
                  </button>
                  <span
                    class="dropdown"
                    container="body"
                    ngbdropdown=""
                  >
                    <button
                      aria-expanded="false"
                      class="dropdown-toggle btn btn-warning"
                      disabled=""
                      id="reject-account-request-1"
                      ngbdropdowntoggle=""
                      type="button"
                    >
                       Reject 
                    </button>
                    <div
                      class="dropdown-menu"
                      ngbdropdownmenu=""
                    >
                      <button
                        class="btn btn-light btn-sm dropdown-item"
                        id="reject-request-1"
                      >
                         Reject 
                      </button>
                      <button
                        class="btn btn-light btn-sm dropdown-item"
                        id="reject-request-with-reason-1"
                      >
                         Reject With Reason 
                      </button>
                    </div>
                  </span>
                </div>
              </td>
            </tr>
            <tr>
              <td>
                Instructor C
              </td>
              <td>
                instructorc@example.com
              </td>
              <td>
                REJECTED
              </td>
              <td>
                Institution and Country C
              </td>
              <td
                id="timestamp-box"
              >
                Created Time C
              </td>
              <td>
                <div
                  id="comment-box"
                >
                  Comment C
                </div>
              </td>
              <td
                class="align-middle"
              >
                <div
                  class="d-flex flex-row align-items-center justify-content-center gap-2"
                >
                  <div>
                    <a
                      id="edit-account-request-2"
                    >
                      <i
                        class="fa-solid fa-pen"
                      />
                    </a>
                  </div>
                  <div
                    class="ngb-tooltip-class"
                    placement="top"
                  >
                    <a
                      id="delete-account-request-2"
                    >
                      <i
                        class="fa-solid fa-trash"
                      />
                    </a>
                  </div>
                  <div>
                    <a
                      id="view-account-request-2"
                    >
                      <i
                        class="fa-solid fa-eye"
                      />
                    </a>
                  </div>
                  <button
                    class="btn btn-success"
                    id="approve-account-request-2"
                  >
                    Approve
                  </button>
                  <span
                    class="dropdown"
                    container="body"
                    ngbdropdown=""
                  >
                    <button
                      aria-expanded="false"
                      class="dropdown-toggle btn btn-warning"
                      disabled=""
                      id="reject-account-request-2"
                      ngbdropdowntoggle=""
                      type="button"
                    >
                       Reject 
                    </button>
                    <div
                      class="dropdown-menu"
                      ngbdropdownmenu=""
                    >
                      <button
                        class="btn btn-light btn-sm dropdown-item"
                        id="reject-request-2"
                      >
                         Reject 
                      </button>
                      <button
                        class="btn btn-light btn-sm dropdown-item"
                        id="reject-request-with-reason-2"
                      >
                         Reject With Reason 
                      </button>
                    </div>
                  </span>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </tm-account-request-table>
</tm-admin-home-page>
`;
